<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_fight"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="655dp"
        android:orientation="vertical"
        android:paddingStart="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/power_of_weapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerOfWeapon"
            android:textColor="@color/colorMain" />

        <TextView
            android:id="@+id/protection_of_chest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerOfChest"
            android:textColor="@color/colorMain" />

        <TextView
            android:id="@+id/protection_of_boots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerOfBoots"
            android:textColor="@color/colorMain" />

        <TextView
            android:id="@+id/protection_of_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerOfHead"
            android:textColor="@color/colorMain" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="655dp"
        android:orientation="vertical"
        android:paddingStart="230sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/power_of_weapon_of_enemy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OpponentWeaponPower"
            android:textColor="@color/colorMain" />

        <TextView
            android:id="@+id/protection_of_chest_of_enemy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OpponentBodyProtection"
            android:textColor="@color/colorMain" />

        <TextView
            android:id="@+id/protection_of_boots_of_enemy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OpponentBootsProtection"
            android:textColor="@color/colorMain" />

        <TextView
            android:id="@+id/protection_of_head_of_enemy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OpponentHeadProtection"
            android:textColor="@color/colorMain" />
    </LinearLayout>

    <TextView
        android:id="@+id/myHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="612dp"
        android:paddingStart="20sp"
        android:paddingTop="100sp"
        android:text="@string/MyHealth"
        android:textColor="@color/colorMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/myOpponentHealth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="612dp"
        android:paddingStart="230sp"
        android:paddingTop="100sp"
        android:text="@string/MyOpponentHealth"
        android:textColor="@color/colorMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/fight_description_of_enemy"
        android:layout_width="383dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="12dp"
        android:paddingLeft="20sp"
        android:text="@string/StartTheFight"
        android:textColor="@color/colorMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myHealth" />

    <TextView
        android:id="@+id/fight_description_of_hero"
        android:layout_width="375dp"
        android:layout_height="72dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="85dp"
        android:paddingLeft="20sp"
        android:text="@string/StartTheFight"
        android:textColor="@color/colorMain"
        app:layout_constraintBottom_toTopOf="@+id/fight_description_of_enemy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myHealth"
        app:layout_constraintVertical_bias="0.666" />

    <Button
        android:id="@+id/AttackChest"
        android:layout_width="162dp"
        android:layout_height="114dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="54dp"
        android:background="@color/goldForButtons"
        android:text="@string/Body"
        android:textColor="@color/colorMain"
        app:layout_constraintBottom_toTopOf="@+id/AttackLegs"
        app:layout_constraintEnd_toStartOf="@+id/AttackHead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fight_description_of_enemy" />

    <Button
        android:id="@+id/AttackHead"
        android:layout_width="162dp"
        android:layout_height="114dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="45dp"
        android:background="@color/goldForButtons"
        android:text="@string/Head"
        android:textColor="@color/colorMain"
        app:layout_constraintBottom_toTopOf="@+id/AttackWeapon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AttackChest"
        app:layout_constraintTop_toBottomOf="@+id/fight_description_of_enemy" />

    <Button
        android:id="@+id/AttackLegs"
        android:layout_width="162dp"
        android:layout_height="114dp"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="33dp"
        android:background="@color/goldForButtons"
        android:text="@string/Legs"
        android:textColor="@color/colorMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AttackWeapon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AttackChest" />

    <Button
        android:id="@+id/AttackWeapon"
        android:layout_width="162dp"
        android:layout_height="114dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="33dp"
        android:background="@color/goldForButtons"
        android:text="@string/Lose_Weapon"
        android:textColor="@color/colorMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AttackLegs"
        app:layout_constraintTop_toBottomOf="@+id/AttackHead" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="733dp"
        android:foreground="@mipmap/gradient1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="14dp"
        android:layout_height="738dp"
        android:layout_marginBottom="1dp"
        android:foreground="@mipmap/gradient1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="397dp"
        android:layout_height="14dp"
        android:foreground="@mipmap/gradient1"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>