<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="253dp"
        android:layout_height="43dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="106dp"
        android:text="@string/CurrentThings"
        android:textColor="@color/colorMain"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/weapon_in_profile"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/weapon_in_profile"
        android:layout_width="157dp"
        android:layout_height="44dp"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="38dp"
        android:text="@string/StartWeapon"
        android:textColor="@color/colorMain"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/chest_in_profile"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/chest_in_profile"
        android:layout_width="221dp"
        android:layout_height="53dp"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="35dp"
        android:text="@string/StartChest"
        android:textColor="@color/colorMain"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/boots_in_profile"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/weapon_in_profile" />

    <TextView
        android:id="@+id/boots_in_profile"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="32dp"
        android:text="@string/StartBoots"
        android:textColor="@color/colorMain"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/head_in_profile"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/chest_in_profile" />

    <TextView
        android:id="@+id/head_in_profile"
        android:layout_width="186dp"
        android:layout_height="43dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="222dp"
        android:text="@string/StartHead"
        android:textColor="@color/colorMain"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/boots_in_profile" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="733dp"
        android:foreground="@mipmap/gradient1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="14dp"
        android:layout_height="738dp"
        android:layout_marginBottom="1dp"
        android:foreground="@mipmap/gradient1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="397dp"
        android:layout_height="14dp"
        android:foreground="@mipmap/gradient1"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>