<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ShopFragment"
    android:background="@color/gold">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="482dp"
        android:layout_height="match_parent"
        android:layout_marginTop="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/weapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:background="@color/goldForButtons"
            android:text="@string/Weapon"
            android:textColor="@color/colorMain"
            android:textSize="16sp" />

        <Button
            android:id="@+id/stomach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:background="@color/goldForButtons"
            android:text="@string/Stomach_protection"
            android:textColor="@color/colorMain"
            android:textSize="16sp" />

        <Button
            android:id="@+id/shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:background="@color/goldForButtons"
            android:text="@string/boots"
            android:textColor="@color/colorMain"
            android:textSize="16sp" />

        <Button
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:background="@color/goldForButtons"
            android:text="@string/heads"
            android:textColor="@color/colorMain"
            android:textSize="16sp" />


    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="326dp"
        android:layout_height="489dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </ListView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="14dp"
        android:layout_height="733dp"
        android:foreground="@mipmap/gradient1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="93dp"
        android:layout_height="738dp"
        android:layout_marginLeft="380dp"
        android:layout_marginBottom="1dp"
        android:foreground="@mipmap/gradient1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="427dp"
        android:layout_height="14dp"
        android:foreground="@mipmap/gradient1"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</FrameLayout>